calicoPolicies/deny-nodeports.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-nodeports
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
    - action: Deny
      destination:
        ports:
          - 32513:32767
      protocol: TCP
      source: {}
    - action: Deny
      destination:
        ports:
          - 32513:32767
      protocol: UDP
      source: {}
  selector: ibm.role=='worker_public'
  order: 1100
  types:
    - Ingress
